plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.company'
version = '1.0.0'
description = 'Olnatura QR Suite'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	// Solo Maven Central — sin SNAPSHOT de Spring (builds reproducibles / Azure).
	mavenCentral()
}

def frontendDir = file("${projectDir}/../../web/qr-enterprise-frontend")
def frontendDistDir = file("${frontendDir}/dist")
def backendStaticDir = file("${projectDir}/src/main/resources/static")
def npmCommand = System.getProperty("os.name").toLowerCase().contains("windows") ? "npm.cmd" : "npm"

tasks.register('frontendNpmCi', Exec) {
	workingDir frontendDir
	commandLine npmCommand, 'ci'
	inputs.file file("${frontendDir}/package.json")
	inputs.file file("${frontendDir}/package-lock.json")
	outputs.dir file("${frontendDir}/node_modules")
}

tasks.register('frontendBuild', Exec) {
	dependsOn 'frontendNpmCi'
	workingDir frontendDir
	commandLine npmCommand, 'run', 'build'
	inputs.dir file("${frontendDir}/src")
	inputs.file file("${frontendDir}/index.html")
	inputs.file file("${frontendDir}/vite.config.ts")
	inputs.file file("${frontendDir}/tsconfig.json")
	inputs.file file("${frontendDir}/tsconfig.app.json")
	inputs.file file("${frontendDir}/tsconfig.node.json")
	outputs.dir frontendDistDir
}

tasks.register('copyFrontendToStatic', Sync) {
	dependsOn 'frontendBuild'
	from frontendDistDir
	into backendStaticDir
	// Keep backend-owned static assets that are not generated by Vite.
	preserve {
		include "logo-olnatura.png"
	}
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'

    runtimeOnly 'org.postgresql:postgresql'

    implementation 'com.github.librepdf:openpdf:1.3.30'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('processResources') {
	dependsOn 'copyFrontendToStatic'
}
